--- a/FrontEnd/HTML/Mangas/chainsawManTomos.html
+++ b/FrontEnd/HTML/Mangas/chainsawManTomos.html
@@ -11,17 +11,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <!-- Termino Bootstrap -->
 
-    <link rel="stylesheet" href="/CSS/EstilosPages.css"><!-- Llamar Style deseado -->
-    <link rel="website icon" type="png" href="/Images/LogoMangaMania.png"> <!-- Llamar el logo de la pagina -->
+    <link rel="stylesheet" href="/FrontEnd/CSS/EstilosPages.css"><!-- Llamar Style deseado -->
+    <link rel="website icon" type="png" href="/FrontEnd/Images/LogoMangaMania.png"> <!-- Llamar el logo de la pagina -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.min.js"></script>
-    <script src="/JavaScript/comentariosAcciones.js"></script>
+    <script src="/FrontEnd/JavaScript/resena.js"></script>
 </head>
 <body> <!-- Cuerpo del codigo -->
     <header> <!-- Cabeza del codigo -->
         <div class="contenedor">
-            <img class="logo" src="/Images/LogoMangaMania.png" alt="LogoMangaMania">
+            <img class="logo" src="/FrontEnd/Images/LogoMangaMania.png" alt="LogoMangaMania">
             <h1> MangaMania || Mangas - Chainsaw Man - Tomos</h1>
         </div>
     </header>
@@ -30,10 +30,11 @@
         <nav class="navbar bg-body-tertiary">
             <div class="container">
                 <a class="navbar-brand" href="javascript:history.back()" > <i class="bi bi-skip-backward"></i> Regresar </a>
-                <a class="navbar-brand" href="/index.html"><i class="bi bi-house-fill"></i> Inicio</a>
-                <a class="navbar-brand" href="/HTML/Pages/Pag Mangas.html"><i class="bi bi-book"></i> Mangas</a>
-                <a class="navbar-brand" href="/HTML/Pages/Pag Categorias.html"><i class="bi bi-tags"></i> Categoria</a>
-                <a class="navbar-brand" href="/HTML/Pages/Pag_Populares.html"><i class="bi bi-star"></i> Popular</a>
+                <a class="navbar-brand" href="/FrontEnd/index.html"><i class="bi bi-house-fill"></i> Inicio</a>
+                <a class="navbar-brand" href="/FrontEnd/HTML/Pages/Pag Mangas.html"><i class="bi bi-book"></i> Mangas</a>
+                <a class="navbar-brand" href="/FrontEnd/HTML/Pages/Pag Categorias.html"><i class="bi bi-tags"></i> Categoria</a>
+                <a class="navbar-brand" href="/FrontEnd/HTML/Pages/Pag_Populares.html"><i class="bi bi-star"></i> Popular</a>
+                <a class="navbar-brand" href="/FrontEnd/HTML/Pages/Pag_Suscripccion.html"><i class="bi bi-shop"></i> Suscripccion</a>
             </div>
         </nav><br>
 
@@ -41,7 +42,7 @@
             <div class="row">
                 <div class="col-3">
                     <div class="card">
-                        <img alt="PortadaBoruto" src="/Images/PortadaChainsawMan.jpg">
+                        <img alt="PortadaBoruto" src="/FrontEnd/Images/PortadaChainsawMan.jpg">
                     </div>
                     <div class="list-group">
                         <div class="btn btn-success">
@@ -108,7 +109,7 @@
         <hr>
         <!-- Inicio Introduccion -->
         <div class="container">
-            <img src="/Images/TituloChainsawMan.png" alt="TituloChainsawMan" style="width: 20%;">
+            <img src="/FrontEnd/Images/TituloChainsawMan.png" alt="TituloChainsawMan" style="width: 20%;">
             <h2>Introducción</h2>
             <b>
                 La historia sigue a Denji, un joven extremadamente pobre que vive una vida miserable trabajando como cazador de demonios para pagar las deudas de su fallecido padre a la yakuza. Denji tiene un perro-demonio llamado Pochita, que también puede transformarse en una motosierra, ayudándolo en su labor de cazar demonios.<br><br>
@@ -127,23 +128,36 @@
         </div>
         <!-- Termino video Trailer -->
         <hr>
-        <!-- Inicio Comentarios -->
+        <!-- Inicio RESEÑA -->
         <div class="container">
-            <h2>Comentarios</h2>
-            <form id="comentarioForm">
+            <h2>RESEÑA</h2>
+            <form id="resenaForm">
                 <div class="form-group">
-                    <label for="userName">Nombre Usuario:</label>
-                    <input type="text" class="form-control" id="userName" name="userName" required>
+                    <label for="user_id">Usuario ID:</label>
+                    <input type="text" class="form-control" id="user_id" name="user_id" required>
                 </div>
                 <div class="form-group">
-                    <label for="comentarioDescrip">Descripcion:</label>
-                    <input type="text" class="form-control" id="comentarioDescrip" name="comentarioDescrip" required>
+                    <label for="manga_id">Manga ID:</label>
+                    <input type="text" class="form-control" id="manga_id" name="manga_id" required>
                 </div>
-                <br>
-                <button type="submit" class="btn btn-primary">Registrar Comentario</button>
+                <div class="form-group">
+                    <label for="rating">Calificación:</label>
+                    <select class="form-select" aria-label="Default select example" id="rating" name="rating">
+                        <option value="1">1 estrella</option>
+                        <option value="2">2 estrellas</option>
+                        <option value="3">3 estrellas</option>
+                        <option value="4">4 estrellas</option>
+                        <option value="5">5 estrellas</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="comment">Comentario:</label>
+                    <textarea class="form-control" placeholder="Pon tu reseña aqui" id="comment" name="comment"></textarea>
+                </div><br>
+                <button type="button" onclick="submitResena()" class="btn btn-primary">Registrar Reseña</button>
             </form>
         </div>
-        <!-- Termino Comentarios -->
+        <!-- Termino RESEÑA -->
         <hr>
         <!-- Inicio Comentarios Registrados -->
         <div class="container">
@@ -166,7 +180,7 @@
     <footer> <!-- Pie de codigo -->
         <h3> Entrar en la comunidad </h3>
         <b> ¿Te gustaria entrar en nuestra sociedad para estar al dia con nuestros articulos?</b><br>
-        <b> <a href="/HTML/User/Registro.html"> Registrate </a> o si ya tienes <a href="/HTML/User/InicioSesion.html"> Inicia Sesion</a></b>
+        <b> <a href="/FrontEnd/HTML/User/Registro.html"> Registrate </a> o si ya tienes <a href="/FrontEnd/HTML/User/InicioSesion.html"> Inicia Sesion</a></b>
     </footer>
 </body>
 </html>
