--- a/FrontEnd/HTML/Pages/Pag Mangas.html
+++ b/FrontEnd/HTML/Pages/Pag Mangas.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <!-- Termino Bootstrap -->
-    <link rel="stylesheet" href="/CSS/EstilosPages.css"><!-- Llamar Style deseado -->
-    <link rel="website icon" type="png" href="/Images/LogoMangaMania.png"> <!-- Llamar el logo de la pagina -->
+    <link rel="stylesheet" href="/FrontEnd/CSS/EstilosPages.css"><!-- Llamar Style deseado -->
+    <link rel="website icon" type="png" href="/FrontEnd/Images/LogoMangaMania.png"> <!-- Llamar el logo de la pagina -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.min.js"></script>
@@ -19,7 +19,7 @@
 <body> <!-- Cuerpo del codigo -->
     <header> <!-- Cabeza del codigo -->
         <div class="contenedor">
-            <img class="logo" src="/Images/LogoMangaMania.png" alt="LogoMangaMania">
+            <img class="logo" src="/FrontEnd/Images/LogoMangaMania.png" alt="LogoMangaMania">
         <h1> MangaMania || Mangas </h1>
         </div>
     </header>
@@ -28,10 +28,11 @@
         <nav class="navbar bg-body-tertiary">
             <div class="container">
                 <a class="navbar-brand" href="javascript:history.back()" > <i class="bi bi-skip-backward"></i> Regresar </a>
-                <a class="navbar-brand" href="/index.html"><i class="bi bi-house-fill"></i> Inicio</a>
-                <a class="navbar-brand" href="/HTML/Pages/Pag Mangas.html"><i class="bi bi-book"></i> Mangas</a>
-                <a class="navbar-brand" href="/HTML/Pages/Pag Categorias.html"><i class="bi bi-tags"></i> Categoria</a>
-                <a class="navbar-brand" href="/HTML/Pages/Pag_Populares.html"><i class="bi bi-star"></i> Popular</a>
+                <a class="navbar-brand" href="/FrontEnd/index.html"><i class="bi bi-house-fill"></i> Inicio</a>
+                <a class="navbar-brand" href="/FrontEnd/HTML/Pages/Pag Mangas.html"><i class="bi bi-book"></i> Mangas</a>
+                <a class="navbar-brand" href="/FrontEnd/HTML/Pages/Pag Categorias.html"><i class="bi bi-tags"></i> Categoria</a>
+                <a class="navbar-brand" href="/FrontEnd/HTML/Pages/Pag_Populares.html"><i class="bi bi-star"></i> Popular</a>
+                <a class="navbar-brand" href="/FrontEnd/HTML/Pages/Pag_Suscripccion.html"><i class="bi bi-shop"></i> Suscripccion</a>
             </div>
         </nav><br>
 
@@ -40,120 +41,120 @@
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
                   <div class="card h-100">
-                    <img src="/Images/V1Naruto.jfif" class="card-img-top" alt="V1Naruto">
+                    <img src="/FrontEnd/Images/V1Naruto.jfif" class="card-img-top" alt="V1Naruto">
                     <div class="card-body">
                       <h5 class="card-title">Naruto</h5>
-                      <a href="/HTML/Mangas/NarutoTomos.html" class="btn btn-primary">Ir a los Tomos</a>
+                      <a href="/FrontEnd/HTML/Mangas/NarutoTomos.html" class="btn btn-primary">Ir a los Tomos</a>
                     </div>
                   </div>
                 </div>
 
                 <div class="col">
                     <div class="card h-100">
-                        <img src="/Images/V1OnePiece.jfif" class="card-img-top" alt="V1OnePiece">
+                        <img src="/FrontEnd/Images/V1OnePiece.jfif" class="card-img-top" alt="V1OnePiece">
                         <div class="card-body">
                             <h5 class="card-title">One Piece</h5>
-                            <a href="/HTML/Mangas/OnePieceTomos.html" class="btn btn-primary">Ir a los Tomos</a>
+                            <a href="/FrontEnd/HTML/Mangas/OnePieceTomos.html" class="btn btn-primary">Ir a los Tomos</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col">
                     <div class="card h-100">
-                        <img src="/Images/V1DragonBall.jpg" class="card-img-top" alt="V1DragonBall">
+                        <img src="/FrontEnd/Images/V1DragonBall.jpg" class="card-img-top" alt="V1DragonBall">
                         <div class="card-body">
                             <h5 class="card-title">Dragon Ball</h5>
-                            <a href="/HTML/Mangas/dragonBallTomos.html" class="btn btn-primary">Ir a los Tomos</a>
+                            <a href="/FrontEnd/HTML/Mangas/dragonBallTomos.html" class="btn btn-primary">Ir a los Tomos</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col">
                     <div class="card h-100">
-                        <img src="/Images/V1HunterxHunter.jpg" class="card-img-top" alt="V1HunterxHunter">
+                        <img src="/FrontEnd/Images/V1HunterxHunter.jpg" class="card-img-top" alt="V1HunterxHunter">
                         <div class="card-body">
                             <h5 class="card-title">Hunter x Hunter</h5>
-                            <a href="/HTML/Mangas/hunterxHunterTomos.html" class="btn btn-primary">Ir a los Tomos</a>
+                            <a href="/FrontEnd/HTML/Mangas/hunterxHunterTomos.html" class="btn btn-primary">Ir a los Tomos</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col">
                     <div class="card h-100">
-                        <img src="/Images/V1NeonGenesisEvangelion.jpeg" class="card-img-top" alt="V1NeonGenesisEvangelion">
+                        <img src="/FrontEnd/Images/V1NeonGenesisEvangelion.jpeg" class="card-img-top" alt="V1NeonGenesisEvangelion">
                         <div class="card-body">
                             <h5 class="card-title">Neon Genesis Evangelion</h5>
-                            <a href="/HTML/Mangas/neonGenesisEvangelionTomos.html" class="btn btn-primary">Ir a los Tomos</a>
+                            <a href="/FrontEnd/HTML/Mangas/neonGenesisEvangelionTomos.html" class="btn btn-primary">Ir a los Tomos</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col">
                     <div class="card h-100">
-                        <img src="/Images/V1Boruto.jpg" class="card-img-top" alt="V1Boruto">
+                        <img src="/FrontEnd/Images/V1Boruto.jpg" class="card-img-top" alt="V1Boruto">
                         <div class="card-body">
                             <h5 class="card-title">Boruto</h5>
-                            <a href="/HTML/Mangas/borutoTomos.html" class="btn btn-primary">Ir a los Tomos</a>
+                            <a href="/FrontEnd/HTML/Mangas/borutoTomos.html" class="btn btn-primary">Ir a los Tomos</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col">
                     <div class="card h-100">
-                        <img src="/Images/V1JujutsuKaisen.jpg" class="card-img-top" alt="V1JujutsuKaisen">
+                        <img src="/FrontEnd/Images/V1JujutsuKaisen.jpg" class="card-img-top" alt="V1JujutsuKaisen">
                         <div class="card-body">
                             <h5 class="card-title">Jujutsu Kaisen</h5>
-                            <a href="/HTML/Mangas/JujutsuKaisenTomos.html" class="btn btn-primary">Ir a los Tomos</a>
+                            <a href="/FrontEnd/HTML/Mangas/JujutsuKaisenTomos.html" class="btn btn-primary">Ir a los Tomos</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col">
                     <div class="card h-100">
-                        <img src="/Images/V1DemonSlayer.jpg" class="card-img-top" alt="V1DemonSlayer">
+                        <img src="/FrontEnd/Images/V1DemonSlayer.jpg" class="card-img-top" alt="V1DemonSlayer">
                         <div class="card-body">
                             <h5 class="card-title">Demon Slayer</h5>
-                            <a href="/HTML/Mangas/demonSlayer.html" class="btn btn-primary">Ir a los Tomos</a>
+                            <a href="/FrontEnd/HTML/Mangas/demonSlayer.html" class="btn btn-primary">Ir a los Tomos</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col">
                     <div class="card h-100">
-                        <img src="/Images/V1MyHeroAcademia.jpg" class="card-img-top" alt="V1MyHeroAcademia">
+                        <img src="/FrontEnd/Images/V1MyHeroAcademia.jpg" class="card-img-top" alt="V1MyHeroAcademia">
                         <div class="card-body">
                             <h5 class="card-title">My Hero Academia</h5>
-                            <a href="/HTML/Mangas/myHeroAcademiaTomos.html" class="btn btn-primary">Ir a los Tomos</a>
+                            <a href="/FrontEnd/HTML/Mangas/myHeroAcademiaTomos.html" class="btn btn-primary">Ir a los Tomos</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col">
                     <div class="card h-100">
-                        <img src="/Images/V1SPYxFamily.jpg" class="card-img-top" alt="V1SPYxFamily">
+                        <img src="/FrontEnd/Images/PortadaSPYxFamily.jpg" class="card-img-top" alt="V1SPYxFamily">
                         <div class="card-body">
                             <h5 class="card-title">SPY x Family</h5>
-                            <a href="/HTML/Mangas/sPYxFamily.html" class="btn btn-primary">Ir a los Tomos</a>
+                            <a href="/FrontEnd/HTML/Mangas/sPYxFamily.html" class="btn btn-primary">Ir a los Tomos</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col">
                     <div class="card h-100">
-                        <img src="/Images/V1AttackOnTitan.jpg" class="card-img-top" alt="V1AttackOnTitan">
+                        <img src="/FrontEnd/Images/V1AttackOnTitan.jpg" class="card-img-top" alt="V1AttackOnTitan">
                         <div class="card-body">
                             <h5 class="card-title">Attack On Titan</h5>
-                            <a href="/HTML/Mangas/attackOnTitan.html" class="btn btn-primary">Ir a los Tomos</a>
+                            <a href="/FrontEnd/HTML/Mangas/attackOnTitan.html" class="btn btn-primary">Ir a los Tomos</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col">
                     <div class="card h-100">
-                        <img src="/Images/V1ChainsawMan.jpg" class="card-img-top" alt="V1ChainsawMan">
+                        <img src="/FrontEnd/Images/V1ChainsawMan.jpg" class="card-img-top" alt="V1ChainsawMan">
                         <div class="card-body">
                             <h5 class="card-title">Chainsaw Man</h5>
-                            <a href="/HTML/Mangas/chainsawManTomos.html" class="btn btn-primary">Ir a los Tomos</a>
+                            <a href="/FrontEnd/HTML/Mangas/chainsawManTomos.html" class="btn btn-primary">Ir a los Tomos</a>
                         </div>
                     </div>
                 </div>
@@ -166,7 +167,7 @@
     <footer> <!-- Pie de codigo -->
         <h3> Entrar en la comunidad </h3>
         <b> ¿Te gustaria entrar en nuestra sociedad para estar al dia con nuestros articulos?</b><br>
-        <b> <a href="/HTML/User/Registro.html"> Registrate </a> o si ya tienes <a href="/HTML/User/InicioSesion.html"> Inicia Sesion</a></b>
+        <b> <a href="/FrontEnd/HTML/User/Registro.html"> Registrate </a> o si ya tienes <a href="/FrontEnd/HTML/User/InicioSesion.html"> Inicia Sesion</a></b>
     </footer>
 </body>
 </html>
