--- a/FrontEnd/HTML/Pages/Pag_Suscripccion.html
+++ b/FrontEnd/HTML/Pages/Pag_Suscripccion.html
@@ -3,27 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina Mangas Populares</title>
+    <title>Pagina Suscripccion</title>
 
     <!-- Inicio Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <!-- Termino Bootstrap -->
-
     <link rel="stylesheet" href="/FrontEnd/CSS/EstilosPages.css"><!-- Llamar Style deseado -->
     <link rel="website icon" type="png" href="/FrontEnd/Images/LogoMangaMania.png"> <!-- Llamar el logo de la pagina -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.min.js"></script>
-
-    <script src="/FrontEnd/JavaScript/aPIMangas.js"></script>
 </head>
 <body> <!-- Cuerpo del codigo -->
     <header> <!-- Cabeza del codigo -->
         <div class="contenedor">
             <img class="logo" src="/FrontEnd/Images/LogoMangaMania.png" alt="LogoMangaMania">
-        <h1> MangaMania || Mangas Categorias</h1>
+        <h1> MangaMania || Suscripccion</h1>
         </div>
     </header>
 
@@ -39,17 +36,62 @@
             </div>
         </nav><br>
 
+        <h1>Suscripciones</h1><br>
+        <!-- Inicio Tipo Suscripcciones -->
         <div class="container text-center">
-            <div class="container">
-                <h1>API De Mangas</h1>
-                <div id="mangas" class="row">
-                    <!-- Mangas se cargarán aquí -->
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="/FrontEnd/Images/LogoMangaMania.png" class="card-img-top" alt="LogoMangaMania">
+                        <div class="card-body">
+                          <h5 class="card-title">Gratuita</h5>
+                          <a href="/FrontEnd/HTML/Mangas/NarutoTomos.html" class="btn btn-primary">Suscribirse</a>
+                        </div>
+                      </div>
                 </div>
-                <div id="loading">
-                    Cargando más mangas ...
+
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="/FrontEnd/Images/LogoMangaMania.png" class="card-img-top" alt="LogoMangaMania">
+                        <div class="card-body">
+                          <h5 class="card-title">Mensual - $10.00</h5>
+                          <a href="/FrontEnd/HTML/Mangas/NarutoTomos.html" class="btn btn-primary">Suscribirse</a>
+                        </div>
+                      </div>
                 </div>
+
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="/FrontEnd/Images/LogoMangaMania.png" class="card-img-top" alt="LogoMangaMania">
+                        <div class="card-body">
+                          <h5 class="card-title">Anual - $60.00</h5>
+                          <a href="/FrontEnd/HTML/Mangas/NarutoTomos.html" class="btn btn-primary">Suscribirse</a>
+                        </div>
+                      </div>
+                </div>
+
             </div>
         </div><br>
+        <!-- Termino Tipo Suscripcciones -->
+         <hr>
+         <!-- Inicio Suscripcciones Registrados -->
+        <div class="container">
+            <h3>Comentarios Registrados</h3>
+            <table id="comentariosTable" class="table">
+                <thead>
+                    <tr>
+                        <th>Nombre Usuario</th>
+                        <th>Descripcion</th>
+                        <th>Acciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Los registros de los Suscripcciones se añadirán aquí -->
+                </tbody>
+            </table>
+        </div>
+        <!-- Termino Suscripcciones Registrados -->
     </main>
     
     <footer> <!-- Pie de codigo -->
