--- a/FrontEnd/HTML/User/InicioSesion.html
+++ b/FrontEnd/HTML/User/InicioSesion.html
@@ -11,14 +11,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <!-- Termino Bootstrap -->
 
-    <link rel="stylesheet" href="/CSS/EstilosUser.css"> <!-- Llamar Style deseado -->
-    <link rel="website icon" type="image/png" href="/Images/LogoMangaMania.png"> <!-- Llamar el logo de la página -->
+    <link rel="stylesheet" href="/FrontEnd/CSS/EstilosUser.css"> <!-- Llamar Style deseado -->
+    <link rel="website icon" type="image/png" href="/FrontEnd/Images/LogoMangaMania.png"> <!-- Llamar el logo de la página -->
 </head>
 
 <body> <!-- Cuerpo del código -->
     <header> <!-- Cabeza del código -->
         <div class="contenedor">
-            <img class="logo" src="/Images/LogoMangaMania.png" alt="LogoMangaMania">
+            <img class="logo" src="/FrontEnd/Images/LogoMangaMania.png" alt="LogoMangaMania">
             <h1>MangaMania || Inicio de Sesión en la cuenta</h1>
         </div>
     </header>
@@ -27,60 +27,52 @@
         <nav class="navbar bg-body-tertiary">
             <div class="container">
                 <a class="navbar-brand" href="javascript:history.back()"> <i class="bi bi-skip-backward"></i> Regresar </a>
-                <a class="navbar-brand" href="/index.html"><i class="bi bi-house-fill"></i> Inicio</a>
-                <a class="navbar-brand" href="/HTML/Pages/Pag Mangas.html"><i class="bi bi-book"></i> Mangas</a>
-                <a class="navbar-brand" href="/HTML/Pages/Pag Categorias.html"><i class="bi bi-tags"></i> Categoría</a>
-                <a class="navbar-brand" href="/HTML/Pages/Pag_Populares.html"><i class="bi bi-star"></i> Popular</a>
+                <a class="navbar-brand" href="/FrontEnd/index.html"><i class="bi bi-house-fill"></i> Inicio</a>
+                <a class="navbar-brand" href="/FrontEnd/HTML/Pages/Pag Mangas.html"><i class="bi bi-book"></i> Mangas</a>
+                <a class="navbar-brand" href="/FrontEnd/HTML/Pages/Pag Categorias.html"><i class="bi bi-tags"></i> Categoría</a>
+                <a class="navbar-brand" href="/FrontEnd/HTML/Pages/Pag_Populares.html"><i class="bi bi-star"></i> Popular</a>
             </div>
         </nav> <br>
 
-        <div class="container text-left">
-            <div class="row align-items-start">
-                <div class="col-12">
-                    <div class="contenedor fondoForm">
-                        <h2>Iniciar Sesión</h2>
-                        <form id="miFormulario" class="formulario">
-                            <div class="formulario__grupo" id="grupo__txtGmail">
-                                <label for="txtGmail" class="formulario__label"><i class="bi bi-file-person-fill"></i> Gmail cliente:</label>
-                                <div class="formulario__grupo-input">
-                                    <input type="email" id="txtGmail" name="gmail" class="formulario__input" placeholder="abc@gmail.com" required>
-                                    <i class="formulario__validacion-estado bi bi-check-circle-fill"></i>
-                                </div>
-                                <p class="formulario__input-error">El correo solo puede contener letras, números, puntos, guiones y guion bajo.</p>
-                            </div>
 
-                            <div class="formulario__grupo" id="grupo__contrasena">
-                                <label for="contrasena" class="formulario__label"><i class="bi bi-file-lock2-fill"></i> Contraseña:</label>
-                                <div class="formulario__grupo-input">
-                                    <input type="password" id="contrasena" class="formulario__input" placeholder="Contraseña" required minlength="4" maxlength="12">
-                                    <i class="formulario__validacion-estado bi bi-check-circle-fill"></i>
-                                </div>
-                                <p class="formulario__input-error">La contraseña tiene que ser de 4 a 12 dígitos.</p>
-                            </div>
-
-                            <div class="formulario__grupo formulario__grupo-btn-enviar">
-                                <button type="submit" class="formulario__btn"><i class="bi bi-box-arrow-in-left"></i> Iniciar Sesión</button>
-                                <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">¡Formulario enviado exitosamente!</p>
-                            </div>
-
-                            <div class="formulario__grupo formulario__grupo-btn-enviar">
-                                <b><a href="/HTML/User/Registro.html">Registrarse</a> || <a href="/HTML/User/RecuperarContra.html">Olvidé mi contraseña</a></b>
-                            </div>
-
-                            <div class="formulario__mensaje" id="formulario__mensaje">
-                                <p><i class="bi bi-exclamation-triangle-fill"></i> <b>Error:</b> Por favor rellena el formulario correctamente.</p>
-                            </div>
-                        </form>
+        <div class="container fondoForm">
+            <form id="miFormulario" class="formulario">
+                <div class="formulario__grupo" id="grupo__gmail">
+                    <label for="gmail" class="formulario__label">Correo Electronico</label>
+                    <div class="formulario__grupo-input">
+                        <input type="email" class="formulario__input" name="gmail" id="gmail" class="formulario__input" placeholder="correo@correo.com" required>
+                        <i class="formulario__validacion-estado bi"></i>
                     </div>
+                    <p class="formulario__input-error">El correo debe ser valido.</p>
                 </div>
-            </div>
+
+                <div class="formulario__grupo" id="grupo__password">
+                    <label for="password" class="formulario__label">Contraseña</label>
+                    <div class="formulario__grupo-input">
+                        <input type="password" class="formulario__input" name="password" id="password"class="formulario__input" placeholder="Ingrese su Contraseña" required>
+                        <i class="formulario__validacion-estado bi"></i>
+                    </div>
+                    <p class="formulario__input-error">La contraseña debe tener entre 4 y 12 caracteres.</p>
+                </div>
+
+                <div class="formulario__mensaje" id="formulario__mensaje">
+                    <p>Error: Por favor rellena el formulario correctamente.</p>
+                </div>
+
+                <div class="formulario__grupo formulario__grupo-btn-enviar">
+                    <button type="submit" class="formulario__btn">Iniciar Sesión</button>
+                    <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Formulario enviado exitosamente!</p>
+                </div>
+            </form>
         </div>
-    </main> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+    </main> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
     <footer> <!-- Pie de código -->
         <div class="contenedor">
-            <img class="logo" src="/Images/LogoMangaMania.png" alt="LogoMangaMania">
-            <h1>MangaMania || Inicio de Sesión en la cuenta</h1>
+            <img class="logo" src="/FrontEnd/Images/LogoMangaMania.png" alt="LogoMangaMania">
+            <h1>MangaMania || Inicio de Sesión</h1>
         </div>
+        <script src="/FrontEnd/JavaScript/ses2.js"></script>
     </footer>
 </html>
