--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -10,9 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"/>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <!-- Termino Bootstrap -->
-
-    <link rel="stylesheet" href="/CSS/EstilosPages.css"/> <!-- Llamar Style deseado -->
-    <link rel="website icon" type="png" href="/Images/LogoMangaMania.png"/> <!-- Llamar el logo de la pagina -->
+     <link rel="stylesheet" href="/FrontEnd/CSS/EstilosPages.css"/> <!-- Llamar Style deseado -->
+     <link rel="website icon" type="png" href="/FrontEnd/Images/LogoMangaMania.png"/> <!-- Llamar el logo de la pagina -->
   </head>
   <body>
     <!-- Cuerpo del codigo -->
@@ -21,7 +20,7 @@
       <div class="contenedor">
         <img
           class="logo"
-          src="/Images/LogoMangaMania.png"
+          src="/FrontEnd/Images/LogoMangaMania.png"
           alt="LogoMangaMania"
         />
         <h1>Bienvenidos a MangaMania</h1>
@@ -33,10 +32,11 @@
       <!-- Codigo principal o central -->
       <nav class="navbar bg-body-tertiary">
         <div class="container">
-          <a class="navbar-brand" href="index.html"><i class="bi bi-house-fill"></i> Inicio</a>
-          <a class="navbar-brand" href="HTML/Pages/Pag Mangas.html"><i class="bi bi-book"></i> Mangas</a>
-          <a class="navbar-brand" href="HTML/Pages/Pag Categorias.html"><i class="bi bi-tags"></i> Categoria</a>
-          <a class="navbar-brand" href="HTML/Pages/Pag_Populares.html"><i class="bi bi-star"></i> Popular</a>
+          <a class="navbar-brand" href="/FrontEnd/index.html"><i class="bi bi-house-fill"></i> Inicio</a>
+          <a class="navbar-brand" href="/FrontEnd/HTML/Pages/Pag Mangas.html"><i class="bi bi-book"></i> Mangas</a>
+          <a class="navbar-brand" href="/FrontEnd/HTML/Pages/Pag Categorias.html"><i class="bi bi-tags"></i> Categoria</a>
+          <a class="navbar-brand" href="/FrontEnd/HTML/Pages/Pag_Populares.html"><i class="bi bi-star"></i> Popular</a>
+          <a class="navbar-brand" href="/FrontEnd/HTML/Pages/Pag_Suscripccion.html"><i class="bi bi-shop"></i> Suscripccion</a>
         </div>
       </nav>
       <br />
@@ -46,15 +46,15 @@
         <div class="carousel-inner">
 
           <div class="carousel-item active">
-            <a href="HTML/Mangas/borutoTomos.html">
-              <img src="Images/TituloBoruto.png" class="d-block w-100" alt="TituloBoruto"/>
+            <a href="/FrontEnd/HTML/Mangas/borutoTomos.html">
+              <img src="/FrontEnd/Images/TituloBoruto.png" class="d-block w-100" alt="TituloBoruto"/>
             </a>
           </div>
 
           <div class="carousel-item">
-            <a href="HTML/Mangas/JujutsuKaisenTomos.html">
+            <a href="/FrontEnd/HTML/Mangas/JujutsuKaisenTomos.html">
               <img
-                src="Images/TituloJujutsuKaisen.png"
+                src="/FrontEnd/Images/TituloJujutsuKaisen.png"
                 class="d-block w-100"
                 alt="TituloJujutsuKaisen"
               />
@@ -62,8 +62,8 @@
           </div>
 
           <div class="carousel-item">
-            <a href="HTML/Mangas/OnePieceTomos.html">
-              <img src="Images/TituloOnePiece.png" class="d-block w-100" alt="TituloOnePiece"/>
+            <a href="/FrontEnd/HTML/Mangas/OnePieceTomos.html">
+              <img src="/FrontEnd/Images/TituloOnePiece.png" class="d-block w-100" alt="TituloOnePiece"/>
             </a>
           </div>
 
@@ -84,7 +84,7 @@
 
             <div class="col-4">
               <div class="card mb-3">
-                <img src="Images/LogoMangaMania.png" class="card-img-top" alt="...">
+                <img src="Images/LogoMangaMania.png" class="card-img-top" alt="LogoMangaMania">
                 <div class="card-body">
                   <h5 class="card-title">Manga-Mania</h5>
                   <p class="card-text"><b>¿Qué es MangaManía?</b><br>
@@ -121,9 +121,8 @@
       >
       <br />
       <b>
-        <a href="/HTML/User/Registro.html"> Registrate </a> o si ya tienes
-        <a href="/HTML/User/InicioSesion.html"> Inicia Sesion</a></b
-      >
+        <a href="/FrontEnd/HTML/User/Registro.html"> Registrate </a> o si ya tienes
+        <a href="/FrontEnd/HTML/User/InicioSesion.html"> Inicia Sesion</a></b>
     </footer>
   </body>
 </html>
