--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenido</title>
 
     <!-- Inicio Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <!-- Termino Bootstrap -->
-     <link rel="stylesheet" href="/FrontEnd/CSS/EstilosPages.css"/> <!-- Llamar Style deseado -->
-     <link rel="website icon" type="png" href="/FrontEnd/Images/LogoMangaMania.png"/> <!-- Llamar el logo de la pagina -->
-  </head>
-  <body>
+    <link rel="stylesheet" href="/FrontEnd/CSS/EstilosPages.css"><!-- Llamar Style deseado -->
+    <link rel="website icon" type="png" href="/FrontEnd/Images/LogoMangaMania.png"> <!-- Llamar el logo de la pagina -->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.min.js"></script>
+</head>
+<body>
     <!-- Cuerpo del codigo -->
     <header>
       <!-- Cabeza del codigo -->
       <div class="contenedor">
-        <img
-          class="logo"
-          src="/FrontEnd/Images/LogoMangaMania.png"
-          alt="LogoMangaMania"
-        />
+        <img class="logo" src="/FrontEnd/Images/LogoMangaMania.png" alt="LogoMangaMania"/>
         <h1>Bienvenidos a MangaMania</h1>
       </div>
       <b>Nuestra Pagina Web les ofrece una variedad de Mangas via Online donde podras ver tus Mangas favoritos.</b>
     </header>
-
     <main>
       <!-- Codigo principal o central -->
       <nav class="navbar bg-body-tertiary">
@@ -109,20 +107,15 @@
               Ya seas un veterano del manga o un recién llegado, en "MangaManía" te invitamos a explorar nuestro catálogo, crear tu lista de lecturas y sumergirte en las historias que han capturado los corazones de millones alrededor del mundo. Regístrate hoy y empieza a leer gratis o suscríbete para acceder a contenido exclusivo y beneficios adicionales.</b>
             </div>
         </div><hr>
-    </div>
-    <!-- Termino Introduccion de Pagina -->
-    </main>
-
-    <footer>
-      <!-- Pie de codigo -->
-      <h3>Entrar en la comunidad</h3>
-      <b>
-        ¿Te gustaria entrar en nuestra sociedad para estar al dia con nuestros articulos?</b
-      >
-      <br />
-      <b>
-        <a href="/FrontEnd/HTML/User/Registro.html"> Registrate </a> o si ya tienes
+      </div>
+      <!-- Termino Introduccion de Pagina -->
+  </main>
+  <footer>
+    <!-- Pie de codigo -->
+    <h3>Entrar en la comunidad</h3>
+    <b>¿Te gustaria entrar en nuestra sociedad para estar al dia con nuestros articulos?</b><br>
+    <b> <a href="/FrontEnd/HTML/User/Registro.html"> Registrate </a> o si ya tienes
         <a href="/FrontEnd/HTML/User/InicioSesion.html"> Inicia Sesion</a></b>
-    </footer>
-  </body>
+  </footer>
+</body>
 </html>
