mejora de diseño de registro, deje el inicio sesion como antes y arregle la reseña de Mangas

--- a/FrontEnd/HTML/Pages/Pag Mangas.html
+++ b/FrontEnd/HTML/Pages/Pag Mangas.html
@@ -168,6 +168,7 @@
         <hr>
         <!-- Inicio Formulario Reseña -->
         <div class="container">
+            <h3>Crear Nuevos Comentarios</h3>
             <form id="resenaForm" class="mt-4">
                 <div class="form-group">
                     <label for="manga">Manga</label>
