--- a/FrontEnd/HTML/User/Registro.html
+++ b/FrontEnd/HTML/User/Registro.html
@@ -39,8 +39,8 @@
             </div>
         </nav> <br>
         <!-- Inicio Formulario Registro -->
-         <div class="container">
-            <form id="registerForm" class="mt-4">
+         <div class="container fondoForm">
+            <form id="registerForm" class="mt-4 formulario">
                 <div class="form-group">
                     <label for="username">Username</label>
                     <input type="text" class="form-control" id="username" placeholder="Username" required>
