Update de Registro y iniciar sesion

--- a/FrontEnd/HTML/User/InicioSesion.html
+++ b/FrontEnd/HTML/User/InicioSesion.html
@@ -60,7 +60,7 @@
                 </div>
 
                 <div class="formulario__grupo formulario__grupo-btn-enviar">
-                    <button type="submit" class="formulario__btn">Iniciar Sesión</button>
+                    <button type="submit" class="formulario__btn">Iniciar Sesión</button><br>
                     <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Formulario enviado exitosamente!</p>
                 </div>
             </form>
