--- a/FrontEnd/HTML/User/Registro.html
+++ b/FrontEnd/HTML/User/Registro.html
@@ -42,27 +42,27 @@
          <div class="container fondoForm">
             <form id="registerForm" class="mt-4 formulario">
                 <div class="form-group">
-                    <label for="username">Username</label>
-                    <input type="text" class="form-control" id="username" placeholder="Username" required>
+                    <label for="username">Apodo</label>
+                    <input type="text" class="form-control" id="username" placeholder="Apodo" required>
                 </div>
                 <div class="form-group">
-                    <label for="first_name">First Name</label>
-                    <input type="text" class="form-control" id="first_name" placeholder="First Name" required>
+                    <label for="first_name">Primer Nombre</label>
+                    <input type="text" class="form-control" id="first_name" placeholder="Primer Nombre" required>
                 </div>
                 <div class="form-group">
-                    <label for="last_name">Last Name</label required>
-                    <input type="text" class="form-control" id="last_name" placeholder="Last Name" required>
+                    <label for="last_name">Apellido</label required>
+                    <input type="text" class="form-control" id="last_name" placeholder="Apellido" required>
                 </div>
                 <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" class="form-control" id="email" placeholder="Email" required>
+                    <label for="email">Gmail</label>
+                    <input type="email" class="form-control" id="email" placeholder="Gmail" required>
                 </div>
                 <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" class="form-control" id="password" placeholder="Password" required>
-                </div><br>
+                    <label for="password">Contraseña</label>
+                    <input type="password" class="form-control" id="password" placeholder="Contraseña" required>
+                </div>
                 <button type="submit" class="btn btn-primary btn-block">Guardar Usuario</button>
-            </form>
+            </form><br>
         </div>
         <!-- Termino Formulario Registro -->
     </main> <br><br><br><br><br><br><br>
