--- a/FrontEnd/HTML/Pages/Pag_Suscripccion.html
+++ b/FrontEnd/HTML/Pages/Pag_Suscripccion.html
@@ -97,8 +97,8 @@
                     </tbody>
                 </table>
             </div>
-        </div><br>
-        <!-- Termino Formulario Suscripcciones -->
+        </div>
+        <!-- Termino Formulario Suscripcciones --><br>
     </main>
     
     <footer> <!-- Pie de codigo -->
